<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".activities.MainActivity">

<!--    <com.google.android.material.appbar.AppBarLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="@dimen/height_toolbar">-->

<!--        <com.google.android.material.appbar.MaterialToolbar-->
<!--            android:id="@+id/toolBar"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="match_parent"-->
<!--            app:title="@string/lbl_toolbar"-->
<!--            app:titleCentered="true"-->
<!--            app:titleTextColor="@color/white" />-->
<!--    </com.google.android.material.appbar.AppBarLayout>-->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id = "@+id/rlToolBar"
            android:layout_marginStart= "@dimen/margin_medium"
            android:layout_marginEnd = "@dimen/margin_medium"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_toolbar">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/lbl_toolbar"
                android:textColor="@color/white"
                android:textSize="@dimen/text_heading_1x"
                app:fontFamily="sans-serif-condensed" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id ="@+id/ivSearch"
                android:layout_width="@dimen/margin_xlarge"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/margin_medium_2"
                android:src="@drawable/ic_baseline_search_24"/>

        </RelativeLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_below = "@id/rlToolBar"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <FrameLayout
                    android:id="@+id/flBanner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.viewpager2.widget.ViewPager2
                        android:id="@+id/viewPagerBanner"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/height_banner" />

                    <com.tbuonomo.viewpagerdotsindicator.DotsIndicator
                        android:id="@+id/dotsIndicatorBanner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom|center"
                        app:dotsColor="@color/colorSecondaryText"
                        app:dotsCornerRadius="@dimen/margin_small"
                        app:dotsSize="@dimen/margin_medium"
                        app:dotsSpacing="@dimen/margin_small"
                        app:dotsWidthFactor="1.0"
                        app:progressMode="false"
                        app:selectedDotColor="@color/colorAccent" />
                </FrameLayout>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvBestPopularFilmsAndSeries"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/flBanner"
                    android:layout_marginStart="@dimen/margin_medium_2"
                    android:layout_marginTop="@dimen/margin_medium_3"
                    android:text="@string/lbl_best_popular_flim_and_movies"
                    android:textColor="@color/colorSecondaryText" />

                <include
                    android:id="@+id/vpBestPopularMovieList"
                    layout="@layout/view_pod_movie_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tvBestPopularFilmsAndSeries"
                    android:layout_marginTop="@dimen/margin_medium" />

                <RelativeLayout
                    android:id="@+id/rlMovieShowTime"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_check_movie_show_times"
                    android:layout_below="@id/vpBestPopularMovieList"
                    android:layout_marginStart="@dimen/margin_medium_2"
                    android:layout_marginTop="@dimen/margin_medium_3"
                    android:layout_marginEnd="@dimen/margin_medium_2"
                    android:background="@color/colorPrimaryLight">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvCheckMovieShowTimes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_medium_2"
                        android:layout_marginTop="@dimen/margin_medium_3"
                        android:text="@string/lbl_check_movie_show_time"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_regular_3x"
                        android:textStyle="bold" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/ivShowMore"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignStart="@id/tvCheckMovieShowTimes"
                        android:layout_alignParentBottom="true"
                        android:layout_marginBottom="@dimen/margin_xlarge"
                        android:text="@string/lbl_see_more"
                        android:textColor="@color/colorAccent"
                        android:textSize="@dimen/text_regular_2x"
                        android:textStyle="bold" />

                    <FrameLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="@dimen/margin_xxlarge"
                            android:layout_height="@dimen/margin_xxlarge"
                            android:layout_marginEnd="@dimen/margin_xxlarge"
                            android:layout_marginBottom="@dimen/margin_medium_2"
                            android:src="@drawable/ic_baseline_location_on_white_24dp" />

                    </FrameLayout>


                </RelativeLayout>

                <com.google.android.material.tabs.TabLayout
                    android:id="@+id/tabLayoutGenre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/rlMovieShowTime"
                    android:layout_marginTop="@dimen/margin_medium"
                    android:background="@color/colorPrimaryLight"
                    app:tabIndicatorColor="@color/colorAccent"
                    app:tabMode="scrollable"
                    app:tabSelectedTextColor="@color/white"
                    app:tabTextColor="@color/colorSecondaryText" />

                <FrameLayout
                    android:id="@+id/flMovieByGenre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tabLayoutGenre"
                    android:background="@color/colorPrimaryDark"
                    android:paddingTop="@dimen/margin_medium_3"
                    android:paddingBottom="@dimen/margin_large">

                    <include
                        android:id="@+id/vpMovieByGenreList"
                        layout="@layout/view_pod_movie_list"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                </FrameLayout>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvShowCases"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/flMovieByGenre"
                    android:layout_marginStart="@dimen/margin_medium_2"
                    android:layout_marginTop="@dimen/margin_medium_3"
                    android:text="@string/lbl_show_cases"
                    android:textColor="@color/colorSecondaryText"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvMoreShowCases"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@id/tvShowCases"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="@dimen/margin_medium_2"
                    android:text="@string/lbl_more_show_cases"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvShowCasesMovies"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tvMoreShowCases"
                    android:layout_marginTop="@dimen/margin_card_medium"
                    android:clipToPadding="false"
                    android:paddingEnd="@dimen/margin_medium_2" />

                <include
                    android:id="@+id/vpBestActor"
                    layout="@layout/view_pod_best_actor_list"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@id/rvShowCasesMovies" />

            </RelativeLayout>

        </androidx.core.widget.NestedScrollView>

    </RelativeLayout>



</androidx.coordinatorlayout.widget.CoordinatorLayout>